# edt-langchain-ai

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
data/db/chroma.db/: chroma.sqlite3
data/raw/: project.txt
src/: 01_main.py  03_main.py  04_main.py  05_main.py  07_main.py  11_main.py  chromadb_manager.py  main.py  paths.py
src/building_process/: 02_main.py  08_main.py  09_main.py
